# rant

./: Dockerfile  Mayhemfile
.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compile.rs
mayhem/: Dockerfile  cli.mayhemfile  compile.mayhemfile
